Part III: JavaScript - Make a list - calling function from javascript file instead of html

--- a/index.html
+++ b/index.html
@@ -102,8 +102,6 @@
         <section role="region" id="list"></section>
     </main>
 
-    <script src="./makeAList.js">
-        makeAList(100)
-    </script>
+    <script src="./makeAList.js"></script>
 </body>
 </html>
