--- a/sass-mixin-test/index.html
+++ b/sass-mixin-test/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Video Quiz</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+  <title>SASS Mixin Test</title>
 </head>
 <body>
   <section id="index"></section>
-<script type="text/javascript" src="main.js"></script><script type="text/javascript" src="sass.js"></script></body>
+<script type="text/javascript" src="../main.js"></script><script type="text/javascript" src="../sass.js"></script></body>
 </html>
