--- a/sass-mixin-test/index.html
+++ b/sass-mixin-test/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
   <section id="index"></section>
-<script type="text/javascript" src="../main.js"></script><script type="text/javascript" src="../sass.js"></script></body>
+<script type="text/javascript" src="../sass.js"></script></body>
 </html>
