Part III - JavaScript - makeAList - fix rendering

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main role="main">
-        <section role="region" id="form">
+        <section id="form">
             <form>
                 <h2>Create Account</h2>
                 <fieldset>
@@ -99,9 +99,9 @@
             </form>
         </section>
 
-        <section role="region" id="list"></section>
+        <section id="list"></section>
     </main>
 
-    <script src="./makeAList.js"></script>
+    <script src="./javascript/makeAList.js"></script>
 </body>
 </html>
